k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingflow-service
  labels:
    app: lingflow
spec:
  type: ClusterIP
  selector:
    app: lingflow
  ports:
    - name: websocket
      port: 4030
      targetPort: 4030
      protocol: TCP
